--- a/src/app/layouts/ default-layout/default.layout.component.html
+++ b/src/app/layouts/ default-layout/default.layout.component.html
@@ -1,8 +1,12 @@
 <nav>
+  Default Layout
+  <tr>
   <a routerLink="/">Home</a>       <!-- Используем routerLink вместо href -->
   |
   <a routerLink="/about">About</a>   <!-- Используем routerLink вместо href -->
   |
   <a routerLink="/user">User</a>   <!-- Используем routerLink вместо href -->
+  |
+  <a routerLink="/article">Article</a>
 </nav>
 <router-outlet />
